# myopengl-fun

./: .gitignore  CMakeLists.txt
MotokoGL/: CMakeLists.txt  IVao.h  Light.h  Material.h  MaterialT.h  MotokoGL.h  ShaderProg.cpp  ShaderProg.h  SimpleCamera.h  Tex.cpp  Tex.h  Vao.cpp  Vao.h  Window.cpp  Window.h  fatal.h  glheader.h
Soil/: CMakeLists.txt
my_demo3/: CMakeLists.txt  SyncBuf.h  my_demo3.cpp
my_opencv/: CMakeLists.txt  Shader.h  main.cpp  my_opencv.cpp
shaders/: bg.frag  bg.vert  cub.frag  cub.vert  obj.vert  textures.frag  textures.vert
simple_1/: CMakeLists.txt  main.cpp
simple_2/: CMakeLists.txt  main.cpp
simple_3/: CMakeLists.txt  main.cpp
simple_4/: CMakeLists.txt  main.cpp
simple_5/: CMakeLists.txt  main.cpp
simple_6/: CMakeLists.txt  main.cpp
simple_7/: CMakeLists.txt  main.cpp
simple_8/: CMakeLists.txt  Shader.cpp  main.cpp
